tests/baselines/reference/typeAssertionsWithUnionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/typeAssertionsWithUnionTypes01.ts(14,9): error TS2352: Type 'I1' cannot be converted to type 'number'.


==== tests/cases/conformance/types/typeRelationships/comparable/typeAssertionsWithUnionTypes01.ts (1 errors) ====
    interface I1 {
        p1: number
    }
    
    interface I2 extends I1 {
        p2: number;
    }
    
    var x = { p1: 10, p2: 20 };
    var y: number | I2 = x;
    var z: I1 = x;
    
    var a = <number | I2>z;
    var b = <number>z;
            ~~~~~~~~~
!!! error TS2352: Type 'I1' cannot be converted to type 'number'.
    var c = <I2>z;
    var d = <I1>y;
    